--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,6 +20,12 @@ h1{
     color: green;
 }
 
+h2 span{
+    font-size: 18px;
+    color: green;
+    margin-top: 0px;
+}
+
 .title-box{
     position: absolute;
     top: 0;
